--- a/100_ejercicios_python.ipynb
+++ b/100_ejercicios_python.ipynb
@@ -306,6 +306,172 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "3d278dba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 6, 8, 9.2, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Ejercicio 12\n",
+    "L=[6,8,3,4,1,12,2,9.2]\n",
+    "L.sort()\n",
+    "print(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cfc886bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Ejercicio 13\n",
+    "L=[3,2,2,1,9,1,2,3,7]\n",
+    "cont=0\n",
+    "for i in L:\n",
+    "    if i==1:\n",
+    "        cont+=1\n",
+    "print(cont)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "36d21d0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 25, 30, 45, 90, 'ab', 'cd', 'ef']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Ejercicio 14\n",
+    "L=[]\n",
+    "lista=[10,25,30,45,90,'ab','cd','ef']\n",
+    "for i in lista:\n",
+    "    L.append(i)\n",
+    "print(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "bbd066c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 7, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Ejercicio 15\n",
+    "L=[i for i in range(1,11)]\n",
+    "L1=[i for i in L[::3]]\n",
+    "print(L1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "f8d965a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aacfir\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Ejercicio 16\n",
+    "c='fracia'\n",
+    "l=[]\n",
+    "for i in c:\n",
+    "    l.append(i)\n",
+    "    l.sort()\n",
+    "print(''.join(l))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "28fcd544",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 8, 7, 14, 3, 2, 'a', 'p', 'hola', 'b', 1, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Ejercicio 17\n",
+    "L1=[9,8,7,14,3,2,'a','p','hola','b']\n",
+    "L2=['b',1,9,2,6,3,9,'p']\n",
+    "L3=L1+[i for i in L2 if i not in L1]\n",
+    "print(L3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "4baf75d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Melocoton', 2), ('Banana', 8), ('Kiwi', 9), ('Fresa', 12), ('Manzana', 15)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Ejercicio 18\n",
+    "L=[('Manzana',15),('Banana',8),('Fresa',12),('Kiwi',9),('Melocoton',2)]\n",
+    "L_modificada=sorted(L,key=lambda x: x[1])\n",
+    "print(L_modificada)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "731f6a33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Ejercicio 19"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "6ad44334",
    "metadata": {},
