--- a/100_ejercicios_python.ipynb
+++ b/100_ejercicios_python.ipynb
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3d278dba",
+   "id": "2b75a434",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cfc886bd",
+   "id": "52116368",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "36d21d0c",
+   "id": "393b4dbc",
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bbd066c0",
+   "id": "984d271d",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f8d965a8",
+   "id": "f1f9bb04",
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "28fcd544",
+   "id": "3fd2de73",
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "4baf75d8",
+   "id": "ee0b32f1",
    "metadata": {},
    "outputs": [
     {
@@ -462,12 +462,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "id": "ee238f5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sodot a aloH\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Ejercicio 19\n",
+    "ch='Hola a todos'\n",
+    "print(ch[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "e2ded8b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Ejercicio 20\n",
+    "diccionario={'Manzana':3,'Banana':7,'Kiwi':1}\n",
+    "print(diccionario['Manzana'])\n",
+    "print(diccionario['Banana'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "15c142bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "46\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Ejercicio 21\n",
+    "d={'Manzana':15,'Banana':8,'Fresa':12,'Kiwi':9,'Melocoton':2}\n",
+    "print(sum(d.values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "731f6a33",
+   "id": "1c4a17c0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Ejercicio 19"
+    "#Ejercicio 22\n"
    ]
   },
   {
