Hasta el ejercicio 30

--- a/100_ejercicios_python.ipynb
+++ b/100_ejercicios_python.ipynb
@@ -524,12 +524,209 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "a5369c72",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "187.63\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Ejercicio 22\n",
+    "def dos_decimales(n):\n",
+    "    return round(n,2)\n",
+    "print(dos_decimales(187.632587))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3538f228",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Introduce tu nombre: Julien\n",
+      "Introduce tu edad: 32\n",
+      "Introduce lenguaje de programación: Python\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Me llamo Julien y tengo 32 años. Estoy aprendiendo el lenguje de Python'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Ejercicio 23\n",
+    "def frase():\n",
+    "    miNombre=input('Introduce tu nombre: ')\n",
+    "    edad=int(input('Introduce tu edad: '))\n",
+    "    Lenguaje=input('Introduce lenguaje de programación: ')\n",
+    "    return f'Me llamo {miNombre} y tengo {edad} años. Estoy aprendiendo el lenguje de {Lenguaje}'\n",
+    "frase()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7cb2bbfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8x0=0\n",
+      "8x1=8\n",
+      "8x2=16\n",
+      "8x3=24\n",
+      "8x4=32\n",
+      "8x5=40\n",
+      "8x6=48\n",
+      "8x7=56\n",
+      "8x8=64\n",
+      "8x9=72\n",
+      "8x10=80\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Ejercicio 24\n",
+    "def tabla(n):\n",
+    "    for i in range(11):\n",
+    "        print(f'{n}x{i}={i*n}')\n",
+    "tabla(8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "dcac9934",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\sgcov\\\\Desktop\\\\tokio\\\\libro\\\\100-Ejercicios-Python-'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Ejercicio 25\n",
+    "\n",
+    "import os\n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "84f4ac8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 26\n",
+    "def eliminar_elemento(lista,n):\n",
+    "    lista.remove(n)\n",
+    "    return lista\n",
+    "print(eliminar_elemento([1,2,3,4,5],1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "5e8b02f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root: C:\\Users\\sgcov\\Desktop\\tokio\\libro\\100-Ejercicios-Python-\n",
+      "extension: \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 27\n",
+    "root, extension = os.path.splitext(os.getcwd())\n",
+    "\n",
+    "print(\"Root:\", root)\n",
+    "print(\"extension:\", extension)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "9b2fd69c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8x0=0\n",
+      "8x1=8\n",
+      "8x2=16\n",
+      "8x3=24\n",
+      "8x4=32\n",
+      "8x5=40\n",
+      "8x6=48\n",
+      "8x7=56\n",
+      "8x8=64\n",
+      "8x9=72\n",
+      "8x10=80\n",
+      "0.0010004043579101562\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 28\n",
+    "import time\n",
+    "\n",
+    "start = time.time()\n",
+    "\n",
+    "tabla(8)\n",
+    "\n",
+    "end = time.time()\n",
+    "\n",
+    "print(end - start)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1c4a17c0",
+   "id": "b2df3452",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Ejercicio 22\n"
+    "# Ejercicio 29\n",
+    "L=[3,6,8,7,2,'s','ch','d']\n"
    ]
   },
   {
