--- a/100_ejercicios_python.ipynb
+++ b/100_ejercicios_python.ipynb
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a5369c72",
+   "id": "dc8e97bf",
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3538f228",
+   "id": "0ef31b59",
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7cb2bbfb",
+   "id": "27b3f483",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "dcac9934",
+   "id": "0a942a72",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "84f4ac8d",
+   "id": "7bd210a4",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "5e8b02f2",
+   "id": "e0a895f4",
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "9b2fd69c",
+   "id": "ace0a14c",
    "metadata": {},
    "outputs": [
     {
@@ -720,13 +720,172 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "id": "cc575977",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ch', 7, 3, 8, 's', 'd', 6, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 29\n",
+    "import random\n",
+    "L=[3,6,8,7,2,'s','ch','d']\n",
+    "random.shuffle(L)\n",
+    "print(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "3bb87a01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Ejercicio 30\n",
+    "print(random.randint(20,30))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "c8f7af40",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 \n",
+      "5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 \n",
+      "5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 \n",
+      "5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 \n",
+      "5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 \n",
+      "5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 \n",
+      "5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 \n",
+      "5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 31\n",
+    "for i in range(8):\n",
+    "    for j in range(5,21):\n",
+    "        print(j,end=' ')\n",
+    "    print()   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "7d397270",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 32\n",
+    "L=[3,6,9,12,15,18,21,24]\n",
+    "L1=[n/3 for n in L]\n",
+    "print(L1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "d0db8712",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 2, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 33\n",
+    "L=[-6,5,-3,-1,2,8,-3.6]\n",
+    "L1=[x for x in L if x>0]\n",
+    "print(L1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "265c6e8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 34\n",
+    "\n",
+    "def f(a,b,x):\n",
+    "    return a*x**3+2*a*x**2+b\n",
+    "print(f(3,0,1))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "89ba2f20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 35\n",
+    "def VerifPresencia(a,L):\n",
+    "    if a in L:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "print(VerifPresencia(7,[1,2,3,4,5,6]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b2df3452",
+   "id": "7e187d87",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ejercicio 29\n",
-    "L=[3,6,8,7,2,'s','ch','d']\n"
+    "# Ejercicio 36\n",
+    "d"
    ]
   },
   {
