--- a/100_ejercicios_python.ipynb
+++ b/100_ejercicios_python.ipynb
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dc8e97bf",
+   "id": "b27610b1",
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0ef31b59",
+   "id": "1465214c",
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "27b3f483",
+   "id": "6841d62e",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0a942a72",
+   "id": "fac8b375",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "7bd210a4",
+   "id": "3d993825",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "e0a895f4",
+   "id": "367ba6e1",
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "ace0a14c",
+   "id": "c4956ab2",
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "cc575977",
+   "id": "ce339c12",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "3bb87a01",
+   "id": "0232baaf",
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "c8f7af40",
+   "id": "d3d65ebb",
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "7d397270",
+   "id": "869ed0cc",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "d0db8712",
+   "id": "48de588a",
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "265c6e8a",
+   "id": "b7da49ea",
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "89ba2f20",
+   "id": "e401d49a",
    "metadata": {},
    "outputs": [
     {
@@ -879,13 +879,130 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 116,
+   "id": "a2309b05",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 36\n",
+    "def suma_digitos(n):\n",
+    "    suma=0\n",
+    "    n=str(n)\n",
+    "    for i in n:\n",
+    "        suma+=int(i)\n",
+    "    return suma\n",
+    " \n",
+    "print(suma_digitos(149))\n",
+    "print(suma_digitos(3018))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "1bbc408f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 37\n",
+    "def CalcularSuma(L):\n",
+    "    return sum(L)\n",
+    "print(CalcularSuma([3,2,6,9,-1,5]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "2b50647e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4, 5, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 38\n",
+    "def eliminarDuplicados(L):\n",
+    "    print(list(set(L)))\n",
+    "eliminarDuplicados([2,3,4,2,5,3,5,7,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "9490f7f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Peso': 65.3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 39\n",
+    "def anadirElementoDicc(clave,valor,b):\n",
+    "    b[clave]=valor \n",
+    "    return b\n",
+    "print(anadirElementoDicc('Peso',65.3,{}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "06ae2492",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Ejercicio 40\n",
+    "def maximo(L):\n",
+    "    L.sort()\n",
+    "    return L.pop()\n",
+    "maximo([-9,2,4,1,8])\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "7e187d87",
+   "id": "e0933fde",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ejercicio 36\n",
-    "d"
+    "# Ejercicio 41"
    ]
   },
   {
