--- a/100_ejercicios_python.ipynb
+++ b/100_ejercicios_python.ipynb
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b27610b1",
+   "id": "7f1691bd",
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1465214c",
+   "id": "8d354922",
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6841d62e",
+   "id": "5ff4315a",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "fac8b375",
+   "id": "29847592",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3d993825",
+   "id": "438bd968",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "367ba6e1",
+   "id": "3ac0703c",
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "c4956ab2",
+   "id": "6fee1e75",
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "ce339c12",
+   "id": "43c04196",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "0232baaf",
+   "id": "5178cbc5",
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "d3d65ebb",
+   "id": "95b5f8ea",
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "869ed0cc",
+   "id": "6ed01316",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "48de588a",
+   "id": "0b16f870",
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "b7da49ea",
+   "id": "1112849f",
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "e401d49a",
+   "id": "fbc6db38",
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "a2309b05",
+   "id": "351fdb23",
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "1bbc408f",
+   "id": "02135d69",
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "2b50647e",
+   "id": "2cea5955",
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "9490f7f5",
+   "id": "46a59f33",
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +972,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "06ae2492",
+   "id": "dbde60ed",
    "metadata": {},
    "outputs": [
     {
@@ -997,12 +997,135 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 138,
+   "id": "d2ff24b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "46"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Ejercicio 41\n",
+    "def sumaSublista(L,i,j):\n",
+    "    suma=0\n",
+    "    while i<=j:\n",
+    "        suma+=L[i]\n",
+    "        i+=1\n",
+    "    return suma\n",
+    "sumaSublista([4,10,12,16,18],2,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "a674058d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "**\n",
+      "****\n",
+      "******\n",
+      "********\n",
+      "**********\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 42\n",
+    "lista=[1]\n",
+    "for i in range(2,11):\n",
+    "    if i%2==0:\n",
+    "        lista.append(i)\n",
+    "for i in lista:\n",
+    "    print('*'*i)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "099676e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 43\n",
+    "def minimo(L):\n",
+    "    L.sort()\n",
+    "    return L[0]\n",
+    "print(minimo([-9,2,4,1,8]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "687d8c53",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 44\n",
+    "def longitud(L):\n",
+    "    return len(L)\n",
+    "print(longitud([]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "21af9512",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 45\n",
+    "\n",
+    "def mediaLista(L):\n",
+    "    return sum(L)/len(L)\n",
+    "print(mediaLista([1,2,3,4,5,6,7]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e0933fde",
+   "id": "caff0e27",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ejercicio 41"
+    "# Ejercicio 46\n"
    ]
   },
   {
