--- a/100_ejercicios_python.ipynb
+++ b/100_ejercicios_python.ipynb
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7f1691bd",
+   "id": "ffb1855d",
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8d354922",
+   "id": "0c317cf8",
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5ff4315a",
+   "id": "9d4fb0f0",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "29847592",
+   "id": "1554d443",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "438bd968",
+   "id": "a75225af",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "3ac0703c",
+   "id": "7a570574",
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "6fee1e75",
+   "id": "9daa9389",
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "43c04196",
+   "id": "82f1cfd1",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "5178cbc5",
+   "id": "43b2bf23",
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "95b5f8ea",
+   "id": "41095123",
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "6ed01316",
+   "id": "59311036",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "0b16f870",
+   "id": "ded1b742",
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "1112849f",
+   "id": "6197f75f",
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "fbc6db38",
+   "id": "68e5c2cf",
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "351fdb23",
+   "id": "abeb678e",
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "02135d69",
+   "id": "66427b43",
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "2cea5955",
+   "id": "c7696884",
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "46a59f33",
+   "id": "e4f07265",
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +972,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "dbde60ed",
+   "id": "2a3d20f1",
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +998,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "d2ff24b8",
+   "id": "1417c462",
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1026,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "a674058d",
+   "id": "5f18c419",
    "metadata": {},
    "outputs": [
     {
@@ -1056,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "099676e6",
+   "id": "c57aa4cf",
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1078,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "687d8c53",
+   "id": "dc2d5278",
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +1099,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "21af9512",
+   "id": "6bcda33a",
    "metadata": {},
    "outputs": [
     {
@@ -1120,12 +1120,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "caff0e27",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 153,
+   "id": "ae751bc2",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Ejercicio 46\n"
+    "# Ejercicio 46\n",
+    "def divisor(n):\n",
+    "    sol=[]\n",
+    "    for i in range(1,n+1):\n",
+    "        if n%i==0:\n",
+    "            sol.append(i)\n",
+    "    sol.sort()\n",
+    "    return sol\n",
+    "print(divisor(3))          "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "id": "1760d8e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 47\n",
+    "def ControlMay(frase):\n",
+    "    for i in frase:\n",
+    "        if i.isalpha() and i.isupper():\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
+    "print(ControlMay('la casa es verde'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "id": "ecd531d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 'a', 8, 'mano', 456, 984, 'lampara']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 48\n",
+    "def concatListas(L1,L2,L3):\n",
+    "    L_unida=L1+L2+L3\n",
+    "    return L_unida\n",
+    "print(concatListas([1,2,3],['a',8,'mano'],[456,984,'lampara']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "id": "5fb2304c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 49\n",
+    "def numValoresDicc(d):\n",
+    "    cont=0\n",
+    "    for clave,valor in d.items():\n",
+    "        cont+=len(valor)\n",
+    "    print(cont)\n",
+    "numValoresDicc({'a':[1,2,3],'b':['w',54],'c':[4]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "id": "4f38cb7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 4, 'b': 432, 't': 23231, 'x': 44}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 50\n",
+    "def concatDicc(d1,d2):\n",
+    "    d1.update(d2)\n",
+    "    return d1\n",
+    "print(concatDicc({'a':4,'b':432},{'t':23231,'x':44}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "id": "a8f68686",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 51\n",
+    "def calculoFactorial(n):\n",
+    "    sol=1\n",
+    "    for i in range(1,n+1):\n",
+    "        sol*=i\n",
+    "    print(sol)\n",
+    "calculoFactorial(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "id": "cbaa0da5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 15, 25, 35, 45, 55, 65, 75, 85, 95]"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Ejercicio 52\n",
+    "def divisoresMult(n,a,numUmbral):\n",
+    "    lista=[]\n",
+    "    for i in range(1,numUmbral):\n",
+    "        if i % n==0 and i%a!=0:\n",
+    "            lista.append(i)\n",
+    "    return lista\n",
+    "divisoresMult(5,2,100)"
    ]
   },
   {
@@ -1145,7 +1308,7 @@
     }
    ],
    "source": [
-    "#Ejercicio 53\n",
+    "# Ejercicio 53\n",
     "def presenciaVocal(frase):\n",
     "    for i in frase:\n",
     "        if i in 'AEIOUaeiou':\n",
