--- a/100_ejercicios_python.ipynb
+++ b/100_ejercicios_python.ipynb
@@ -1468,6 +1468,118 @@
     "    return sorted(solution)\n",
     "print(unionLista([4,2,3],[],[4,-7,9]))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "54016e60",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 60\n",
+    "def mcd(a,b):\n",
+    "    if a==0:\n",
+    "        return b\n",
+    "    elif b==0:\n",
+    "        return a\n",
+    "    else:\n",
+    "        c=a%b\n",
+    "        return mcd(b,c)\n",
+    "print(mcd(270,192))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "627672b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola, yo soy un estudiante de python. y yo me llamo Javier\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 61\n",
+    "# Abre un archivo para escribir (crea uno si no existe)\n",
+    "with open('prueba.txt', 'w') as archivo:\n",
+    "    archivo.write('Hola, yo soy un estudiante de python. y yo me llamo Javier\\n')\n",
+    "def leerFichero(rutaFichero):\n",
+    "    with open(rutaFichero, 'r') as archivo:\n",
+    "        contenido = archivo.read()\n",
+    "    print(contenido)\n",
+    "leerFichero('prueba.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "ac719bfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def numOcFichero(rutaFichero, palabra):\n",
+    "    try:\n",
+    "        with open(rutaFichero, \"r\") as archivo:\n",
+    "            contenido = archivo.read()\n",
+    "            palabras = contenido.lower().split()\n",
+    "\n",
+    "            frecuencia_palabras = {}\n",
+    "            for palabra2 in palabras:\n",
+    "                palabra2 = ''.join(c for c in palabra2 if c.isalpha())\n",
+    "                frecuencia_palabras[palabra2] = frecuencia_palabras.get(palabra2, 0) + 1\n",
+    "\n",
+    "            if palabra2 in frecuencia_palabras:\n",
+    "                return frecuencia_palabras[palabra]\n",
+    "            else:\n",
+    "                return 0\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"El archivo {rutaFichero} no fue encontrado.\")\n",
+    "        return 0\n",
+    "\n",
+    "# Ejemplo de uso\n",
+    "print(numOcFichero('prueba.txt', 'yo'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "1f1ef844",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ejercicio 63\n",
+    "def eliminarCaracter(rutaFichero,caracter):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef32ad74",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
