--- a/100_ejercicios_python.ipynb
+++ b/100_ejercicios_python.ipynb
@@ -1472,7 +1472,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "54016e60",
+   "id": "5b82f6a0",
    "metadata": {},
    "outputs": [
     {
@@ -1499,7 +1499,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "627672b0",
+   "id": "00ce027c",
    "metadata": {},
    "outputs": [
     {
@@ -1525,8 +1525,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "ac719bfb",
+   "execution_count": 48,
+   "id": "38ffc9b0",
    "metadata": {},
    "outputs": [
     {
@@ -1538,12 +1538,12 @@
     }
    ],
    "source": [
+    "#Ejercicio 62\n",
     "def numOcFichero(rutaFichero, palabra):\n",
     "    try:\n",
     "        with open(rutaFichero, \"r\") as archivo:\n",
     "            contenido = archivo.read()\n",
     "            palabras = contenido.lower().split()\n",
-    "\n",
     "            frecuencia_palabras = {}\n",
     "            for palabra2 in palabras:\n",
     "                palabra2 = ''.join(c for c in palabra2 if c.isalpha())\n",
@@ -1563,23 +1563,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "1f1ef844",
+   "execution_count": 47,
+   "id": "4cdb8603",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola yo soy un estudiante de python.Y yo me llamo Javier.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Ejercicio 63\n",
-    "def eliminarCaracter(rutaFichero,caracter):\n",
-    "    pass"
+    "def eliminarCaracter(rutaFichero, caracter):\n",
+    "    try:\n",
+    "        with open(rutaFichero, \"r\") as archivo:\n",
+    "            contenido = archivo.read()\n",
+    "\n",
+    "        contenido_sin_caracter = contenido.replace(caracter, '')\n",
+    "        return contenido_sin_caracter\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"El archivo {rutaFichero} no fue encontrado.\")\n",
+    "        return 0\n",
+    "print(eliminarCaracter('prueba.txt', ','))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef32ad74",
+   "id": "a971a5f0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Ejer"
+   ]
   }
  ],
  "metadata": {
