--- a/100_ejercicios_python.ipynb
+++ b/100_ejercicios_python.ipynb
@@ -1472,7 +1472,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5b82f6a0",
+   "id": "7ec01d0a",
    "metadata": {},
    "outputs": [
     {
@@ -1499,7 +1499,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "00ce027c",
+   "id": "6716077d",
    "metadata": {},
    "outputs": [
     {
@@ -1526,7 +1526,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "38ffc9b0",
+   "id": "6f2be3fd",
    "metadata": {},
    "outputs": [
     {
@@ -1564,7 +1564,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "4cdb8603",
+   "id": "b494b03d",
    "metadata": {},
    "outputs": [
     {
@@ -1593,12 +1593,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "28af21a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 64\n",
+    "def presenciaNumero(rutaFichero):\n",
+    "    try:\n",
+    "        with open(rutaFichero, 'r') as archivo:\n",
+    "            for linea in archivo:\n",
+    "                palabras = linea.split()\n",
+    "                for palabra in palabras:\n",
+    "                    try:\n",
+    "                        int(palabra)\n",
+    "                        return True\n",
+    "                    except ValueError:\n",
+    "                        pass\n",
+    "        return False\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"El archivo {rutaFichero} no se encontró.\")\n",
+    "        return False\n",
+    "\n",
+    "# Ejemplo de uso\n",
+    "ruta_del_archivo = \"prueba.txt\"\n",
+    "resultado = presenciaNumero(ruta_del_archivo)\n",
+    "print(resultado)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a971a5f0",
+   "id": "ec1c6bbb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ejer"
+    "# Ejercicio 65"
    ]
   }
  ],
